issue #2234 continue colour updates for dark mode

--- a/admin/themes/roma/theme.css
+++ b/admin/themes/roma/theme.css
@@ -839,7 +839,7 @@ input:focus + .slider {
 
 /*UserList Pop in*/
 
-.CloseUserList, .CloseAddAlbum, #CloseDeleteAlbum{
+.CloseUserList, .CloseAddAlbum, #CloseDeleteAlbum, .close-modal{
   color: #444;
 }
 
